# secure_talk_server

./: .gitignore  README.md
cpp/: CMakeLists.txt  Client.cpp  Client.h  Config.cpp  Config.h  Logger.cpp  Logger.h  Package.cpp  Package.h  PackageReader.cpp  PackageReader.h  SecureCounter.cpp  SecureCounter.h  handle_connection.cpp  handle_connection.h  main.cpp  secure_talk_server  secure_talk_server.conf  ssl_listen_thread.cpp  ssl_listen_thread.h  utils.cpp  utils.h
py_prototype/: DB_INFO  TODO  config.py  server.py
py_prototype/test/: TODO  test.py
test/cpp/: CMakeCache.txt  CMakeLists.txt  PackageReaderTest.h  PackageTest.h  SecureCounterTest.h  UtilsTest.h  main.cpp
